--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ pytz==2019.3
 PyYAML==5.3.1
 render==1.0.0
 requests==2.23.0
+six==1.15.0
+spotipy==2.12.0
 sqlparse==0.3.1
 urllib3==1.25.9
 Werkzeug==1.0.0
